# nene2-python

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  compose.yaml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
.vitepress/: config.mts
.vitepress/theme/: custom.css
alembic/: env.py
alembic/versions/: 001_create_notes_and_tags_tables.py
docs/: index.md  roadmap.md
docs/adr/: 0001-toolchain.md  0002-clean-architecture.md  0003-security-first.md  0004-ai-first-design.md  0005-logging.md  0006-rate-limiting.md  0009-mcp-design.md  0010-async-use-case.md  0011-mcp-as-core-dependency.md
docs/de/: index.md
docs/de/explanation/: architecture.md  design-philosophy.md  field-trial-methodology.md  one-usecase-two-surfaces.md
docs/de/how-to/: add-new-domain.md  api-versioning.md  async-use-case.md  background-tasks.md  concurrency-patterns.md  configure-auth.md  cors.md  custom-auth-middleware.md  decimal-unicode-input.md  dependency-injection.md  domain-events.md  email-address-parsing.md  file-upload.md  lifespan-and-app-state.md  middleware-stack.md  new-project.md  problem-details.md  release-and-publish.md  response-patterns.md  run-integration-tests.md  run-tests.md  soft-delete.md  sqlalchemy-repository.md  streaming.md  structured-logging.md  validation.md  webhook.md
docs/de/howto/: mcp-setup.md
docs/de/reference/: api.md  configuration.md  framework-modules.md
docs/de/tutorials/: first-domain.md  getting-started.md
docs/explanation/: architecture.md  design-philosophy.md  field-trial-methodology.md  one-usecase-two-surfaces.md
docs/field-trials/: 2026-05-field-trial-1.md  2026-05-field-trial-10.md  2026-05-field-trial-100.md  2026-05-field-trial-101.md  2026-05-field-trial-102.md  2026-05-field-trial-103.md  2026-05-field-trial-104.md  2026-05-field-trial-105.md  2026-05-field-trial-106.md  2026-05-field-trial-107.md  2026-05-field-trial-108.md  2026-05-field-trial-109.md  2026-05-field-trial-11.md  2026-05-field-trial-110.md  2026-05-field-trial-111.md  2026-05-field-trial-112.md  2026-05-field-trial-113.md  2026-05-field-trial-114.md  2026-05-field-trial-115.md  2026-05-field-trial-116.md  2026-05-field-trial-117.md  2026-05-field-trial-118.md  2026-05-field-trial-119.md  2026-05-field-trial-12.md  2026-05-field-trial-120.md  2026-05-field-trial-121.md  2026-05-field-trial-122.md  2026-05-field-trial-123.md  2026-05-field-trial-124.md  2026-05-field-trial-125.md  2026-05-field-trial-126.md  2026-05-field-trial-127.md  2026-05-field-trial-128.md  2026-05-field-trial-129.md  2026-05-field-trial-13.md  2026-05-field-trial-130.md  2026-05-field-trial-131.md  2026-05-field-trial-132.md  2026-05-field-trial-133.md  2026-05-field-trial-134.md  (+244 more)
docs/fr/: index.md
docs/fr/explanation/: architecture.md  design-philosophy.md  field-trial-methodology.md  one-usecase-two-surfaces.md
docs/fr/how-to/: add-new-domain.md  api-versioning.md  async-use-case.md  background-tasks.md  concurrency-patterns.md  configure-auth.md  cors.md  custom-auth-middleware.md  decimal-unicode-input.md  dependency-injection.md  domain-events.md  email-address-parsing.md  file-upload.md  lifespan-and-app-state.md  middleware-stack.md  new-project.md  problem-details.md  release-and-publish.md  response-patterns.md  run-integration-tests.md  run-tests.md  soft-delete.md  sqlalchemy-repository.md  streaming.md  structured-logging.md  validation.md  webhook.md
docs/fr/howto/: mcp-setup.md
docs/fr/reference/: api.md  configuration.md  framework-modules.md
docs/fr/tutorials/: first-domain.md  getting-started.md
docs/how-to/: add-new-domain.md  api-versioning.md  async-use-case.md  background-tasks.md  concurrency-patterns.md  configure-auth.md  cors.md  decimal-unicode-input.md  dependency-injection.md  domain-events.md  email-address-parsing.md  file-upload.md  lifespan-and-app-state.md  middleware-stack.md  new-project.md  problem-details.md  release-and-publish.md  response-patterns.md  run-integration-tests.md  run-tests.md  soft-delete.md  sqlalchemy-repository.md  streaming.md  structured-logging.md  validation.md
docs/howto/: mcp-setup.md
docs/ja/: index.md
docs/ja/explanation/: architecture.md  design-philosophy.md  field-trial-methodology.md  one-usecase-two-surfaces.md
docs/ja/how-to/: async-use-case.md  concurrency-patterns.md  configure-auth.md  custom-auth-middleware.md  decimal-unicode-input.md  domain-events.md  email-address-parsing.md  middleware-stack.md  new-project.md  problem-details.md  release-and-publish.md  run-integration-tests.md  run-tests.md  sqlalchemy-repository.md  webhook.md
docs/ja/howto/: mcp-setup.md
docs/ja/reference/: api.md  configuration.md  framework-modules.md
docs/ja/tutorials/: getting-started.md
docs/pt-br/: index.md
docs/pt-br/explanation/: architecture.md  design-philosophy.md  field-trial-methodology.md  one-usecase-two-surfaces.md
docs/pt-br/how-to/: add-new-domain.md  api-versioning.md  async-use-case.md  background-tasks.md  concurrency-patterns.md  configure-auth.md  cors.md  custom-auth-middleware.md  decimal-unicode-input.md  dependency-injection.md  domain-events.md  email-address-parsing.md  file-upload.md  lifespan-and-app-state.md  middleware-stack.md  new-project.md  (+11 more)
docs/public/: CNAME
docs/reference/: api.md  configuration.md  framework-modules.md
docs/review/: 2026-05-22.md  2026-05-23.md  2026-05-30.md
docs/templates/: field-trial-report.md
docs/todo/: current.md
docs/tutorials/: first-domain.md  getting-started.md
docs/zh/: index.md
scripts/: check_docs_nav.py
src/example/: __init__.py  __main__.py  app.py  mcp.py  schema.py
src/nene2/: __init__.py
src/scripts/: export_openapi.py
tests/: conftest.py
tests/example/: conftest.py  test_cors.py  test_examples_protected.py  test_http_mcp_parity.py  test_local_throttle_default.py  test_mcp.py  test_system_routes.py
tests/integration/: conftest.py  test_repository_real_db.py
tests/scripts/: test_export_openapi.py
(+153 files in other folders)
