[project]
name = "nene2-python"
version = "1.8.156"
description = "NENE2 Python — minimal API framework following NENE2's design philosophy"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "hideyukiMORI", email = "info.xion.cc@gmail.com"}]
requires-python = ">=3.12"
keywords = ["fastapi", "pydantic", "sqlalchemy", "mcp", "api", "framework", "clean-architecture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "sqlalchemy>=2.0.49",
    "alembic>=1.18.4",
    "structlog>=24.0",
    "mcp>=1.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/hideyukiMORI/nene2-python"
Repository = "https://github.com/hideyukiMORI/nene2-python"
Documentation = "https://hideyukimori.github.io/nene2-python/"
"Bug Tracker" = "https://github.com/hideyukiMORI/nene2-python/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "mypy>=1.13",
    "ruff>=0.9",
    "pip-audit>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "mypy>=1.13",
    "ruff>=0.9",
    "pip-audit>=2.7",
    "psycopg2-binary>=2.9.12",
]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"
filterwarnings = [
    # StaticPool keeps one connection alive by design; dispose() does not fully close it.
    # Fires only during interpreter shutdown on the module-level app singleton.
    "ignore:unclosed database:ResourceWarning",
]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "def __repr__",
]

# ---------------------------------------------------------------------------
# mypy — strict + unreachable detection
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
files = ["src"]

# ---------------------------------------------------------------------------
# ruff — lint + format
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade — enforce modern Python syntax
    "ANN",  # flake8-annotations — all functions must be typed
    "N",    # pep8-naming
    "B",    # flake8-bugbear — likely bugs and design problems
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit — security anti-patterns
    "T20",  # flake8-print — no print() in production code
    "PTH",  # flake8-use-pathlib — pathlib over os.path
    "RET",  # flake8-return — consistent return patterns
    "TRY",  # tryceratops — try-except patterns
    "PERF", # perflint — performance anti-patterns
    "PL",   # pylint
    "LOG",  # flake8-logging
    "G",    # flake8-logging-format
    "DTZ",  # flake8-datetimez — datetime.now() naive 呼び出し検出
]
ignore = [
    # PHP NENE2 naming convention: Exception/Error suffix (not "Error"-only)
    "N818",
    # Allow long raise messages for clarity
    "TRY003",
    # Allow assert in non-test code when semantically appropriate
    # (tests override this via per-file-ignores)
    # Magic value comparisons are sometimes clearer than named constants
    "PLR2004",
    # Too many arguments/branches — enforce via code review, not hard limit
    "PLR0913",
    "PLR0912",
    # TRY301: Abstract raise to an inner function — too verbose for most cases
    "TRY301",
]

[tool.ruff.lint.per-file-ignores]
# Tests: relax annotations, allow assert, allow magic values
# DTZ: tests intentionally create naive datetimes to test parse_db_datetime conversion
"tests/**" = ["ANN", "S101", "PLR2004", "PLR0913", "DTZ"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ---------------------------------------------------------------------------
# build
# ---------------------------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nene2"]
